--- a/src/webui/_locales/vi/messages.json
+++ b/src/webui/_locales/vi/messages.json
@@ -236,7 +236,7 @@
         "description": "Settings section heading. In this section the user can choose to use an alternative connection and data transfer method -- also known as 'transport'."
     },
     "about#description": {
-        "message": "Psiphon là một công cụ vượt kiểm duyệt - nó được thiết kể để cho truy cập vào Internet mở, các kiểm duyệt và tường lửa. Đây là nguồn mở và được phát triển với sự thương yêu ở Toronto, Canada.",
+        "message": "Psiphon is a <strong>censorship circumvention tool</strong> — it is designed to give access to the open Internet, past censors and firewalls. It is <strong>open source</strong> and developed in Toronto, Canada.",
         "description": "Paragraph on the 'About' page telling users generally what Psiphon is."
     },
     "settings#split-tunnel#heading": {
